Closed Bug 927763 Opened 12 years ago Closed 12 years ago

AWFY: asmjs-apps-box2d-workload1 regression of 15% - 20% on x86 slave on October 15th, 2013

Categories

(Core :: JavaScript Engine: JIT, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla28

People

(Reporter: h4writer, Assigned: bhackett1024)

References

Details

(Whiteboard: [qa-])

Attachments

(1 file)

So apparently bug 924611 also introduced this regression: --no-asmjs --ion-parallell-compile=on asmjs-apps-box2d-workload1 I cannot reproduce with --ion-parallel-compile=off? So could it be that timings have changed a bit. Compiling takes more/less time than before and starts earlier/later? Didn't get fixed by the fix for octane e-b
Brian can you also look into this?
Assignee: nobody → bhackett1024
Depends on: 924611
I think this is bug 927015, which is due to a different bug and which I also can't reproduce.
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → DUPLICATE
This is definitely caused by bug 924611 !! I've ran a bisect myself on my computer before posting. This points to bug 924611. --no-asmjs --ion-parallell-compile=on is 1700ms before and 2100ms after your patch landed (x86)
Status: RESOLVED → REOPENED
Resolution: DUPLICATE → ---
Attached patch patchSplinter Review
This patch seems to help some. Property types for singleton call objects were not being tracked after operations in baseline (these are ALIASEDVAR ops in asm.js code and don't have an IC) which caused a fair number of compilations to fail.
Attachment #822592 - Flags: review?(jdemooij)
Attachment #822592 - Flags: review?(jdemooij) → review+
Status: REOPENED → RESOLVED
Closed: 12 years ago12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Depends on: 932194
Locally I see already a 5% increase with this patch. Also I see the following decrease in regressions (on awfy): asmjs-apps-bullet-workload1: 40% to 28% asmjs-apps-bullet-workload2: 30% to 20% asmjs-apps-bullet-workload3: 26% to 16% I think we should nominate this to uplift to aurora (ff26), right? I opened bug 932194 for the remaining regression
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: