Bug 927763 - Track all property types for singleton scope objects when Ion compiling scripts using them, r=jandem.